fix install check for pynvim and update zsh config

--- a/zsh/zinit/zshrc.1
+++ b/zsh/zinit/zshrc.1
@@ -22,3 +22,6 @@ export C_INCLUDE_PATH=$HOME/.local/include:$C_INCLUDE_PATH
 
 # make zsh compatible with *
 setopt no_nomatch
+
+# set keybind as emacs
+bindkey -e
