--- a/zsh/zinit/zshrc.2
+++ b/zsh/zinit/zshrc.2
@@ -17,5 +17,8 @@ zinit light ajeetdsouza/zoxide
 
 zinit pack"bgn-binary+keys" for fzf
 
+zinit ice as"completion"
+zinit snippet https://github.com/docker/cli/blob/master/contrib/completion/zsh/_docker
+
 zinit ice depth"1"
 zinit light romkatv/powerlevel10k.git
