--- a/zsh/zinit/zshrc.1
+++ b/zsh/zinit/zshrc.1
@@ -18,6 +18,9 @@ export LIBRARY_PATH=$HOME/.local/lib:$LIBRARY_PATH
 export CPLUS_INCLUDE_PATH=$HOME/.local/include:$CPLUS_INCLUDE_PATH
 export C_INCLUDE_PATH=$HOME/.local/include:$C_INCLUDE_PATH
 
+# make zsh case sensitive (default: case insensitive)
+CASE_SENSITIVE="true"
+
 # make zsh compatible with *
 setopt no_nomatch
 
