--- a/zsh/zinit/zshrc.2
+++ b/zsh/zinit/zshrc.2
@@ -14,7 +14,7 @@ zinit ice wait"1" as"command" from"gh-r" lucid \
 	atpull"%atclone" src"init.zsh" nocompile'!'
 zinit light ajeetdsouza/zoxide
 
-zinit pack"bgn-binary+keys" for fzf
+zinit pack"bgn-binary+keys" for junegunn/fzf
 
 zinit ice as"completion"
 zinit snippet https://github.com/docker/cli/blob/master/contrib/completion/zsh/_docker
