--- a/zsh/zinit/zshrc.2
+++ b/zsh/zinit/zshrc.2
@@ -16,6 +16,9 @@ zinit light ajeetdsouza/zoxide
 
 zinit pack"bgn-binary+keys" for junegunn/fzf
 
+zinit ice lucid wait
+zinit light alberti42/tmux-ssh-syncing
+
 zinit ice as"completion"
 zinit snippet https://github.com/docker/cli/blob/master/contrib/completion/zsh/_docker
 
